--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@ export_credentials.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+# Rider
+.idea/
+MultiverseArena.sln.DotSettings.user
+
+# Other
+/*/bin
+data/
+
