--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .import/
 export.cfg
 export_credentials.cfg
+.editorconfig
 
 # Imported translations (automatically generated from CSV files)
 *.translation
@@ -20,5 +21,5 @@ MultiverseArena.sln.DotSettings.user
 
 # Other
 /*/bin
+/*/obj
 data/
-
