Added a testunit for the dataset ctor

--- a/MA_Test/MA_Test.csproj
+++ b/MA_Test/MA_Test.csproj
@@ -21,4 +21,8 @@
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MA_Core\MA_Core.csproj" />
+    </ItemGroup>
+
 </Project>
