--- a/MA_Core/MA_Core.csproj
+++ b/MA_Core/MA_Core.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Vogen" Version="7.0.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Logic\Managers\" />
+    </ItemGroup>
+
 </Project>
